--- a/css/home.css
+++ b/css/home.css
@@ -50,3 +50,23 @@ header svg {
   }
 
 }
+
+
+/* Section video-youtube */
+
+.video-youtube {
+  margin-top: 55px;
+  padding: 60px;
+  background-color: #f7f7f7 ;
+}
+
+
+.video-youtube .title-section h2 {
+  font-weight: 400;
+  font-size: 50px;
+}
+
+
+.video-youtube .card-item {
+  cursor: pointer;
+}
